--- a/.env-dist
+++ b/.env-dist
@@ -1,5 +1,6 @@
 REDIS_URL=redis://localhost:7379
 REDIS_CHANNEL=broadcasthub
+AUTH_TIMEOUT=5000
 WS_PORT=8080
 TINE20_JSON_API_URL=http://localhost:4000/index.php?requestType=JSON
 TINE20_BROADCAST_CHANNEL=broadcasthub
