--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: node:14
 variables:
   REDIS_URL: redis://localhost:6379
   REDIS_CHANNEL: broadcasthub
+  AUTH_TIMEOUT: 5000
   WS_PORT: 80
   TINE20_JSON_API_URL: http://localhost:4000/index.php?requestType=JSON
   TINE20_BROADCAST_CHANNEL: broadcasthub
