--- a/.env-dist
+++ b/.env-dist
@@ -2,8 +2,8 @@ REDIS_URL=redis://localhost:7379
 REDIS_CHANNEL=broadcasthub
 AUTH_TIMEOUT=5000
 WS_PORT=8080
-TINE20_JSON_API_URL=http://localhost:4000/index.php?requestType=JSON
-TINE20_BROADCAST_CHANNEL=broadcasthub
+# RegExp pattern. Gets anchored in the code
+TINE20_JSON_API_URL_PATTERN=(http://localhost:4000)|(http://tenant(1|2|3).my-domain.test:4000)
 DEBUG_DEFAULT_LOGGING=on
 DEBUG_LOG_TO_FILE=on
 # Relative to ./src/Logger.js when starting with "." or ".."
