--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
-image: node:14
+image: node:16
 
 variables:
   REDIS_URL: redis://localhost:6379
   REDIS_CHANNEL: broadcasthub
   AUTH_TIMEOUT: 5000
   WS_PORT: 80
-  TINE20_JSON_API_URL: http://localhost:4000/index.php?requestType=JSON
-  TINE20_BROADCAST_CHANNEL: broadcasthub
+  # Pattern gets anchored in the code
+  TINE20_JSON_API_URL_PATTERN: (http://localhost:4000)|(http://tenant(1|2|3).my-domain.test:4000)
   DEBUG_DEFAULT_LOGGING: "off"
   DEBUG_LOG_TO_FILE: "off"
   DEBUG_LOG_FILE: ../../stdout.log
