--- a/.env-dist
+++ b/.env-dist
@@ -2,6 +2,8 @@ REDIS_URL=redis://localhost:7379
 REDIS_CHANNEL=broadcasthub
 AUTH_TIMEOUT=5000
 WS_PORT=8080
+ENABLE_MULTITENANCY_MODE=false
+TINE20_JSON_API_URL=http://localhost:4000
 # RegExp pattern. Gets anchored in the code
 TINE20_JSON_API_URL_PATTERN=(http://localhost:4000)|(http://tenant(1|2|3).my-domain.test:4000)
 DEBUG_DEFAULT_LOGGING=on
