--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ variables:
   REDIS_CHANNEL: broadcasthub
   AUTH_TIMEOUT: 5000
   WS_PORT: 80
+  ENABLE_MULTITENANCY_MODE: 'false'
+  TINE20_JSON_API_URL: http://localhost:4000
   # Pattern gets anchored in the code
   TINE20_JSON_API_URL_PATTERN: (http://localhost:4000)|(http://tenant(1|2|3).my-domain.test:4000)
   DEBUG_DEFAULT_LOGGING: "off"
